# rust-axum3

./: Cargo.toml  Makefile
.cargo/: config.toml
crates/libs/lib-auth/src/: lib.rs
crates/libs/lib-core/src/model/: error.rs  user.rs
crates/services/web-server/src/web/: error.rs  routes_login.rs
examples/: gen_key.rs  quick_dev.rs
sql/dev_initial/: 01-create-schema.sql
src/: config.rs  error.rs  main.rs
src/_dev_util/: dev_db.rs  mod.rs
src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
src/model/store/: error.rs  mod.rs
src/utils/: error.rs  mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs
src/web/rpc/: mod.rs  rpc_task.rs  task_rpc.rs
